--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,16 @@
+# BlueSky Identity Configuration
 DID=did:plc:xxx
 SIGNING_KEY=xxx
 BSKY_IDENTIFIER=xxx
 BSKY_PASSWORD=xxx
+
+# Local Server Configuration
 HOST=127.0.0.1
 PORT=4100
 METRICS_PORT=4101
+
+# BlueSky Service Endpoints
 FIREHOSE_URL=wss://jetstream1.us-east.bsky.network/subscribe
+
+# Application Settings
 CURSOR_UPDATE_INTERVAL=10000
