--- a/package.json
+++ b/package.json
@@ -1,44 +1,45 @@
 {
-  "name": "zodiacsigns-bsky",
+  "name": "labels4theculture",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "start": "npx tsx src/main.ts",
-    "dev": "npx tsx --watch src/main.ts",
-    "format": "bunx prettier --write .",
-    "lint": "bunx eslint .",
-    "lint:fix": "bunx eslint --fix .",
-    "set-posts": "bunx tsx src/set-posts.ts",
-    "set-labels": "bunx tsx src/set-labels.ts",
-    "prepare": "bunx husky install"
+    "watch": "npx tsx --watch src/main.ts",
+    "format-code": "bunx prettier --write .",
+    "lint-code": "bunx eslint .",
+    "fix-code": "bunx eslint --fix .",
+    "update-posts-db": "bunx tsx src/set-posts.ts",
+    "update-labels-db": "bunx tsx src/set-labels.ts",
+    "setup-git-hooks": "bunx husky install"
   },
   "lint-staged": {
-    "*": "prettier --ignore-unknown --write"
+    "*.ts": ["bunx prettier --write", "bunx eslint --fix"],
+    "*.js": ["bunx prettier --write", "bunx eslint --fix"]
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/better-sqlite3": "^7.6.12",
-    "@types/eslint__js": "^8.42.3",
-    "@types/express": "^4.17.21",
-    "@types/node": "^22.9.1",
-    "eslint": "^9.15.0",
-    "prettier": "^3.3.3",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.15.0"
+    "@eslint/js": "9.15.0",
+    "@trivago/prettier-plugin-sort-imports": "4.3.0",
+    "@types/better-sqlite3": "7.6.12",
+    "@types/eslint__js": "8.42.3",
+    "@types/express": "4.17.21",
+    "@types/node": "22.9.1",
+    "eslint": "9.15.0",
+    "prettier": "3.3.3",
+    "tsx": "4.19.2",
+    "typescript": "5.6.3",
+    "typescript-eslint": "8.15.0"
   },
   "dependencies": {
-    "@atproto/api": "^0.13.16",
-    "@skyware/bot": "^0.3.7",
-    "@skyware/jetstream": "^0.2.0",
-    "@skyware/labeler": "^0.1.13",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.2.10",
-    "pino": "^9.5.0",
-    "pino-pretty": "^13.0.0",
-    "prom-client": "^15.1.3"
+    "@atproto/api": "0.13.16",
+    "@skyware/bot": "0.3.7",
+    "@skyware/jetstream": "0.2.0",
+    "@skyware/labeler": "0.1.13",
+    "dotenv": "16.4.5",
+    "express": "4.21.1",
+    "husky": "9.1.7",
+    "lint-staged": "15.2.10",
+    "pino": "9.5.0",
+    "pino-pretty": "13.0.0",
+    "prom-client": "15.1.3"
   }
 }
