--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # BlueSky Identity Configuration
-DID=did:plc:xxx
+DID=did:plc:@labels4theculture.bsky.social
 SIGNING_KEY=xxx
-BSKY_IDENTIFIER=xxx
+BSKY_IDENTIFIER=@labels4theculture.bsky.social
 BSKY_PASSWORD=xxx
 
 # Local Server Configuration
-HOST=127.0.0.1
+HOST=3.129.16.29
 PORT=4100
 METRICS_PORT=4101
 
